# FTXUI module.
module(
    name = "ftxui",
    version = "6.1.9",
    compatibility_level = 6,
)

# Build dependencies.
bazel_dep(name = "rules_cc", version = "0.1.1")
bazel_dep(name = "platforms", version = "0.0.10")

# Test dependencies.
bazel_dep(name = "googletest", version = "1.14.0.bcr.1", dev_dependency = True)
