# FTXUI module.
module(
    name = "ftxui",
    version = "6.1.9",
    compatibility_level = 6,
)

# Build dependencies.
bazel_dep(name = "rules_cc", version = "0.2.16")
bazel_dep(name = "platforms", version = "1.0.0")

# Test dependencies.
bazel_dep(name = "googletest", version = "1.17.0.bcr.2", dev_dependency = True)
