# Test using individual submodules
cc_binary(
    name = "smoke",
    srcs = ["smoke.cpp"],
    deps = [
        "@ftxui//:component",
        "@ftxui//:dom",
        "@ftxui//:screen",
    ],
)

# Test using the single ftxui target
cc_binary(
    name = "smoke_single_dependency",
    srcs = ["smoke.cpp"],
    deps = [
        "@ftxui//:ftxui",
    ],
)
