# DOM examples
dom_examples = [
  'border',
  'border_colored',
  'border_style',
  'canvas',
  'color_gallery',
  'color_info_palette256',
  'color_truecolor_HSV',
  'color_truecolor_RGB',
  'dbox',
  'gauge',
  'gauge_direction',
  'graph',
  'gridbox',
  'hflow',
  'html_like',
  'linear_gradient',
  'package_manager',
  'paragraph',
  'separator',
  'separator_style',
  'size',
  'spinner',
  'style_blink',
  'style_bold',
  'style_color',
  'style_dim',
  'style_gallery',
  'style_hyperlink',
  'style_inverted',
  'style_italic',
  'style_strikethrough',
  'style_underlined',
  'style_underlined_double',
  'table',
  'text',
  'vbox_hbox',
  'vflow',
]

foreach name : dom_examples
  executable('ftxui_example_' + name,
    'dom' / name + '.cpp',
    include_directories: ftxui_private_inc,
    link_with: [ftxui_dom, ftxui_screen],
    override_options: ['cpp_std=c++20'],
  )
endforeach

# Component examples
component_examples = [
  'button',
  'button_animated',
  'button_in_frame',
  'button_style',
  'canvas_animated',
  'checkbox',
  'checkbox_in_frame',
  'collapsible',
  'composition',
  'custom_loop',
  'dropdown',
  'dropdown_custom',
  'flexbox_gallery',
  'focus',
  'focus_cursor',
  'gallery',
  'homescreen',
  'input',
  'input_in_frame',
  'input_style',
  'linear_gradient_gallery',
  'maybe',
  'menu',
  'menu2',
  'menu_entries',
  'menu_entries_animated',
  'menu_in_frame',
  'menu_in_frame_horizontal',
  'menu_multiple',
  'menu_style',
  'menu_underline_animated_gallery',
  'modal_dialog',
  'modal_dialog_custom',
  'nested_screen',
  'print_key_press',
  'radiobox',
  'radiobox_in_frame',
  'renderer',
  'resizable_split',
  'resizable_split_clamp',
  'scrollbar',
  'selection',
  'slider',
  'slider_direction',
  'slider_rgb',
  'tab_horizontal',
  'tab_vertical',
  'terminal_info',
  'textarea',
  'toggle',
  'window',
  'with_restored_io',
]

foreach name : component_examples
  executable('ftxui_example_' + name,
    'component' / name + '.cpp',
    include_directories: ftxui_private_inc,
    link_with: [ftxui_component, ftxui_dom, ftxui_screen],
    override_options: ['cpp_std=c++20'],
  )
endforeach
