# Copyright 2025 Arthur Sonzogni. All rights reserved.
# Use of this source code is governed by the MIT license that can be found in
# the LICENSE file.

# Test using individual submodules
cc_binary(
    name = "smoke",
    srcs = ["smoke.cpp"],
    deps = [
        "@ftxui//:component",
        "@ftxui//:dom",
        "@ftxui//:screen",
    ],
)

# Test using the single ftxui target
cc_binary(
    name = "smoke_single_dependency",
    srcs = ["smoke.cpp"],
    deps = [
        "@ftxui",
    ],
)
