find_package(ftxui)
function(example name)
  add_executable(${name} ${name}.cpp)
  target_link_libraries(${name} PUBLIC component)
endfunction(example)

example(checkbox)
example(gallery)
example(input)
example(menu)
example(menu2)
example(menu_style)
example(radiobox)
example(tab_horizontal)
example(tab_vertical)
example(toggle)
