function(example name)
  add_executable(${name} ${name}.cpp)
  target_link_libraries(${name} PUBLIC dom)
endfunction(example)

example(dbox)
example(border)
example(gauge)
example(package_manager)
example(separator)
example(spinner)
example(style_blink)
example(style_bold)
example(style_color)
example(style_dim)
example(style_gallery)
example(style_inverted)
example(style_underlined)
example(vbox_hbox)
