function(example name)
  add_executable(${name} ${name}.cpp)
  target_link_libraries(${name} PUBLIC dom)
  set_property(TARGET ${name} PROPERTY CXX_STANDARD 17)
endfunction(example)

example(dbox)
example(border)
example(gauge)
example(package_manager)
example(separator)
example(graph)
example(spinner)
example(style_blink)
example(style_bold)
example(style_color)
example(style_dim)
example(style_gallery)
example(style_inverted)
example(style_underlined)
example(size)
example(vbox_hbox)
example(hflow)
example(paragraph)
example(html_like)
example(window)
