component_sources = files(
  'animation.cpp',
  'button.cpp',
  'catch_event.cpp',
  'checkbox.cpp',
  'collapsible.cpp',
  'component.cpp',
  'component_options.cpp',
  'container.cpp',
  'dropdown.cpp',
  'event.cpp',
  'hoverable.cpp',
  'input.cpp',
  'maybe.cpp',
  'menu.cpp',
  'modal.cpp',
  'radiobox.cpp',
  'renderer.cpp',
  'resizable_split.cpp',
  'app.cpp',
  'slider.cpp',
  'task.cpp',
  'task_queue.cpp',
  'task_runner.cpp',
  'terminal_input_parser.cpp',
  'util.cpp',
  'window.cpp',
)
